...

    ScrollView {
      if trendingMovies.isEmpty {
        Text("No Results")
      } else {
        HStack {
          Text("Trending Movies")
            .fontWeight(.heavy)
            .font(.title)
          Spacer()
        }
        TrendingScrollViewMovie(watchlist: watchlist, movieViewModel: movieViewModel)
          .padding(.bottom)
      }

      if trendingSeries.isEmpty {
        Text("No Results")
      } else {
        HStack {
          Text("Trending Series")
            .fontWeight(.heavy)
            .font(.title)

          Spacer()
        }
        TrendingScrollViewSerie(watchlist: watchlist, movieViewModel: movieViewModel)
...
